--- a/css/style.css
+++ b/css/style.css
@@ -8341,7 +8341,7 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-navbar-panel {
 	color: #151515;
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-	background: #ffffff;
+	background: #003471;
 }
 
 .rd-navbar-fixed .rd-navbar-nav-wrap {
@@ -9551,7 +9551,7 @@ html.rd-navbar-fixed-linked .page {
 
 @media (max-width: 575px) {
 	.swiper-slider-modern .swiper-slide {
-		background-position: 30% 50%;
+		background-position: 55% 50%;
 	}
 }
 
